added files endpoint
