# rqms-swagger.yml
@@ -400,14 +400,9 @@ paths:
   /api/data/user/{user_id}/:
     get:
       parameters:
-        - name: aaps
-          description: Must be blank if ?courses=\<notempty\>
-          in: query
-          schema:
-            type: integer
         - name: courses
           in: query
-          description: Must be blank if ?aaps=\<notempty\>
+          description: Get all courses user_id is enrolled in
           schema:
             type: integer
       description: Get all AAPs or courses of a user
@@ -426,12 +421,7 @@ paths:
                     email: '12345@gmail.com'
                     email_preference: false
                     darkmode_preference: false
-                'Only AAP':
-                  value:
-                    aaps:
-                      - aap1
-                      - aap2
-                'Only Courses':
+                '?courses':
                   value:
                     courses:
                       - course_id: 1
@@ -440,11 +430,56 @@ paths:
                       - course_id: 2
                         course_name: 'Modern Applied Statistics'
                         course_code: 'MAST30025'
-  /api/data/user/{user_id}/aap:
+  /api/data/files/{user_id}:
+    get:
+      parameters:
+        - name: aaps
+          description: Get all AAPs under user_id
+          in: query
+          schema:
+            type: boolean
+        - name: requestid
+          description: Get all files under a request_id
+          in: query
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: 'Accepts no params, ?aaps, or ?requestid'
+          content:
+            application/json:
+              examples:
+                'No param':
+                  value:
+                    field_1: 1
+                '?aaps':
+                  value:
+                    field_1: 1
+                '?requestid':
+                  value:
+                    field_1: 1
+  /api/data/files/upload:
     post:
+      description: Upload a file
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                user_id:
+                  type: integer
+                request_id:
+                  type: integer
+                fileName:
+                  type: array
+                  items:
+                    type: string
+                    format: binary
       responses:
         '201':
-          description: Successfully added AAP(s)
+          description: 'Successfully POSTed a file to this endpoint'
 components:
   schemas:
     Assignment:
@@ -573,10 +608,14 @@ components:
     PostNewCaseRequest:
       type: object
       properties:
-        requests:
-          type: array
-          items:
-            $ref: '#/components/schemas/Request'
+        course_id:
+          type: integer
+        request_type:
+          $ref: '#/components/schemas/RequestType'
+        assignment_id:
+          type: integer
+        request_content:
+          type: string
     Request:
       type: object
       properties:
